Move stuff for better deployment

--- a/frontend-angular-workspace/todo.adoc
+++ b/frontend-angular-workspace/todo.adoc
@@ -24,7 +24,10 @@
 
 * [ ] `ContractDetails` date range input
 ** [ ] Only allow one month or more for monthly rental
-** [ ]
+
+* [ ] `ContractDetails` quick payment
+** [ ] 1/3 payment
+** [ ] Full payment
 
 * [x] `ContractDetails` cancel button
 
